force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/cgcloud__Tactic_Product_Condition__c.object-meta.xml
<CustomObject>
    <description>Internal Conditions generated out of promotions</description>
    <label>Tactic Product Condition</label>
    <nameField>
        <displayFormat>PPC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Product Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>