force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Additional_KPI_Value_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_KPI_Value_3__c</fullName>
    <description>Internal Conditions generated out of promotions or additional Kpis.</description>
    <label>Additional KPI Value 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>