force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Bom_Header_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bom_Header_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the BOM header of the product used to generate this condition.</description>
    <label>BOM Header Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tactic Product Conditions</relationshipLabel>
    <relationshipName>Tactic_Product_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>