force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Export_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Export_Status__c</fullName>
    <description>Defines the status of the export process.</description>
    <label>Export Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>