force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Exported_Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Exported_Version__c</fullName>
    <description>Version of the record exported.</description>
    <label>Exported Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>