force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__In_Product_Filter_Result__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__In_Product_Filter_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product is there because it is in the result of the product filter (or products below this group are in the result of the product filter).</description>
    <label>In Product Filter Result</label>
    <type>Checkbox</type>
</CustomField>