force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Last_Synced_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Synced_Date_Time__c</fullName>
    <description>Date when the record was synced last.</description>
    <label>Last Synced Date Time</label>
    <type>DateTime</type>
</CustomField>