force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Last_Synced_Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Synced_Version__c</fullName>
    <description>Version of the record synchronized from Off-platform.</description>
    <label>Last Synced Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>