force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Listed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product is there because it is listed (or products below this group are listed).</description>
    <label>Listed</label>
    <type>Checkbox</type>
</CustomField>