force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Measure_Code__c</fullName>
    <description>Measure Code of the condition source KPI used to generate this condition.</description>
    <label>Measure Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>