force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Off_Platform_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Off_Platform_Id__c</fullName>
    <description>GUID generated Off-platform</description>
    <externalId>true</externalId>
    <label>Off Platform Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>