force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product (group) for which the condition is generated.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tactic Product Conditions (Product)</relationshipLabel>
    <relationshipName>Tactic_Product_Conditions2</relationshipName>
    <type>Lookup</type>
</CustomField>