force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Product_Part__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the product part linking the BOM component to its header.</description>
    <label>Product Part</label>
    <referenceTo>cgcloud__Product_Part__c</referenceTo>
    <relationshipLabel>Tactic Product Conditions</relationshipLabel>
    <relationshipName>Tactic_Product_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>