force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tactic that generated the condition</description>
    <label>Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Tactic Product Conditions</relationshipLabel>
    <relationshipName>Tactic_Product_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>