force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <description>Start date of the condition</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>