force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <description>End date of the condition</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>