force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/cgcloud__Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value__c</fullName>
    <description>Value of the condition</description>
    <label>Value</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>