force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Product__c</columns>
    <columns>cgcloud__Valid_From__c</columns>
    <columns>cgcloud__Valid_Thru__c</columns>
    <columns>cgcloud__Value__c</columns>
    <columns>cgcloud__Measure_Code__c</columns>
    <columns>cgcloud__Status__c</columns>
    <columns>cgcloud__Export_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>